# CustomAiFrameWork

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
RosAi/: BrowserAction.py  __init__.py  action.py  client.py  setting.py  test.py
aiframework/: Main.py  README.md  README.zh.md  __init__.py  logger.py  main.py  manage.py  requirements.txt  setup.py  template_manager.py
aiframework/backend/: ResultBackendABC.py  file_backend.py  redis_backend.py
aiframework/conf/: PackageSettingsLoader.py  __init__.py  register.py
aiframework/conf/generators/: __init__.py  code_generator.py
aiframework/controller/: __init__.py  init.py
aiframework/core/: __init__.py  action.py
aiframework/core/listen/: CommandLogger.py  LLMProcessor.py  ListenABC.py  readme.txt
aiframework/core/look/: look.py
aiframework/core/mcp/: __init__.py  action.py  client.py  mcp_config.json  server.py  test.py
aiframework/core/observer/: __init__.py  observer.py
aiframework/docs/: api_reference.md  changelog.md  contributing.md  faq.md  getting_started.md  index.md
aiframework/infrastructure/: Factory.py
aiframework/management/: __init__.py  base.py  cli.py  discovery.py  registry.py
aiframework/message/: DataResult.py  EventBus.py  MessageABC.py  __init__.py  message.py
aiframework/task/: executor.py  task.py
aiframework/utils/: SystemInfo.py  __init__.py  decorate.py
excel_files/: python_jobs_xian.xlsx
rosai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
task_cache/: .env  Browser.py  test.html  test.py  test01.py  test02.py
(+39 files in other folders)
