[project]
name = "rosai"
version = "0.1.0"
description = "一个可以快速搭建基于AI的语音助手的框架"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.4",
    "dashscope>=1.22.2",
    "openai>=1.0.0",
    "pyaudio>=0.2.13",
    "jinja2>=3.1.6",
    "dotenv>=0.9.9",
    "redis==6.2.0",
    "psutil>=7.0.0",
    "loguru>=0.7.3",
]

[tool.setuptools]
packages = ["aiframework"]
